Port to NeoForge 1.21.11 (21.11.45): compileJava clean
The big drifts, each isolated where possible:
- ResourceLocation -> Identifier project-wide (1.21.10+ rename)
- NeoForge 21.9 transfer rework: standard caps are transactional
  ResourceHandlers now; new transfer/PackTransfer carries the pack's
  three stores for capability exposure while the battle-tested legacy
  internals (PackInventory et al) keep serving the menu and trinkets
- Recipes: getIngredients/canCraftInDimensions/getResultItem ->
  placementInfo()/display() on PackUpgradeRecipe; server lookups by
  ResourceKey; JEI 27 extension is display-based
- Recipe Ledger: recipes stopped syncing to clients in 1.21.2, so the
  craftable scan + chalk arrangement run server-side now and ship down
  as LedgerSyncPayload/GhostSyncPayload (client stays pure paint)
- GameTests: 1.21.5 registry framework - @PackTest annotation scanned
  by PackworkTestRegistrar into TEST_FUNCTION + 57 generated
  data/packwork/test_instance JSONs (tools/GenTestInstances.java)
- GUI: 1.21.6 render pipeline (blit takes RenderPipeline, 2D pose,
  tooltips deferred) + 1.21.9 input events (MouseButtonEvent/KeyEvent)
- Client items: 25 assets/packwork/items/*.json definitions (1.21.4)
- BlockEntity save/load via ValueInput/ValueOutput; components-era
  predicates in PredicateKind (SwordItem/DiggerItem/ArmorItem gone)
- Soft deps repinned: JEI 27.23.0.71, Curios 14.0.0+1.21.11; Mekanism
  ships no build past 1.21.1 (gate stays dark on this branch)
- Version carries MC build metadata: packwork-1.0.0+mc1.21.11.jar

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>